🎨 fix dark mode color contrast

--- a/_src/assets/css/custom-properties.css
+++ b/_src/assets/css/custom-properties.css
@@ -63,15 +63,15 @@
   @supports (color: oklch(42% 0.1 161)) {
     --clr-main: oklch(47.21% 0.21 29.23);
     --clr-main-darker: oklch(40% 0.21 29.23);
-    --clr-main-light: oklch(57% 0.21 29.23);
+    --clr-main-light: oklch(63% 0.21 29.23);
     --clr-main-dark: oklch(32% 0.21 29.23);
 
     --clr-light: oklch(95% 0.02 90.42);
     --clr-light-dark: oklch(77% 0.02 90.42);
 
-    --clr-dark: oklch(16.38% 0 0);
-    --clr-dark-lighter: oklch(26% 0 0);
-    --clr-dark-light: oklch(42% 0 0);
+    --clr-dark: oklch(16% 0 0);
+    --clr-dark-lighter: oklch(21% 0 0);
+    --clr-dark-light: oklch(41% 0 0);
 
     --clr-brown: oklch(0.43 0.11 65.09);
     --clr-red: oklch(0.59 0.26 29.58);
